# DynaChem

./: CLAUDE.md  Cargo.toml  dynachem_core.txt  dynachem_design_conversation.txt
src/: lib.rs  main.rs
src/input/: mod.rs  spring.rs
src/particles/: electron.rs  mod.rs  proton.rs
src/physics/: constants.rs  coulomb.rs  mod.rs  simulation.rs
src/rendering/: electron_cloud.rs  mod.rs  proton.rs
tests/: integration_tests.rs
